2004-01-04 19:40  mchalla

	* MondoSCF2/SCFs.F90: A bit more tweeking.

2004-01-03 09:48  mchalla

	* Includes/CompilerSpecifics.IntelLinux.PG: Added missing -L

2004-01-03 09:47  mchalla

	* MondoSCF2/SCFs.F90: I have redone SCFCycle and ConvergeQ
	completely.  The code now starts with ODA untill the DIIS error is
	below a threshold.  It then trys DIIS.	If DIIS doesn't work, it
	goes back to ODA.   This is a bit shaky still.	I think I have
	screwed up the response part, and the convergence logic is almost
	certainly not perfect.	So I will need help in the form of examples
	that seem not to behave properly...  VS:
	-------------------------------------------------------------------
	---

2004-01-03 09:43  mchalla

	* SCFeqs/MMA/SCFDev/scf.in: [no log message]

2004-01-03 09:43  mchalla

	* SCFeqs/: DIIS.F90, MIX.F90, ODA.F90: Changed DIIS to start
	ANYWHERE in the SCF sequence.  Thus, it computes all error matrices
	from scratch.  Also, here are STANTON MIXING AND DDA/ODA routines
	that work.

2004-01-03 09:40  mchalla

	* MondoMods/: Slatec.F90, Thresholding.F90: Fixed undeclared
	integers in Slatec, and maybe fixed thresholding error in P-Funk

2004-01-03 09:39  mchalla

	* TwoE/: Compare.nb, ERIInclude.Inc, GetAtomPair.F90, Gradients.m,
	HRR.nb, Int1111.F90, Int1113.F90, Int1131.F90, Int1133.F90,
	Int1311.F90, Int1313.F90, Int1331.F90, Int1333.F90, Int3111.F90,
	Int3113.F90, Int3131.F90, Int3133.F90, Int3311.F90, Int3313.F90,
	Int3331.F90, Int3333.F90, IntSSSS.F90, Integrals.m, Makefile,
	N4K.F90, ShellPairStruct.F90, dERIInclude.Inc, dInt1111.F90,
	dInt1113.F90, dInt1131.F90, dInt1133.F90, dInt1311.F90,
	dInt1313.F90, dInt1331.F90, dInt1333.F90, dInt3111.F90,
	dInt3113.F90, dInt3131.F90, dInt3133.F90, dInt3311.F90,
	dInt3313.F90, dInt3331.F90, dInt3333.F90, dN4K.F90: Benchmarking
	integrals code. Integrals and Gradients work now for no
	permutational symmetry.  The standalone validation code N4K uses